add resolveAttachments
